update products OpenApi